# llm-knowledge-base

./: .env.example  .gitignore  ABOUT.md  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  MEMORY.md  README.md  SCHEMA.yaml  agent.md  pyproject.toml  requirements.txt
antigravity_wiki.egg-info/: SOURCES.txt
docs/: MANUAL.md
scripts/: auto_ingest.py  cli.py  consolidate.py  extract.py  extract_prompt.py  generate_instructions.py  ingest_folder.sh  link.py  lint.py  llm_client.py  log.py  migrate.py  parse_llm_response.py  provenance.py  quality.py  query.py  recheck_daemon.py  recheck_scheduler.py  refine.py  schema.py  state.py  substrate.py  utils.py  validate.py
skill/: README.md  SKILL.md
sources/: README.md  manifest.json
sources/article/: ai-product-strategy-research-plan-google-2026-04-14T00-50-30.md  linkedin-profile-optimization-for-produc-2026-04-14T01-07-07.md
tests/: test_cli.py  test_consolidate.py  test_extract.py  test_generate_instructions.py  test_link.py  test_lint.py  test_llm_client.py  test_migrate.py  test_parse_llm_response.py  test_pipeline.py  test_provenance.py  test_quality.py  test_query.py  test_recheck_scheduler.py  test_refine.py  test_schema.py  test_state.py  test_substrate.py  test_utils.py  test_validate.py
wiki/: _graph.json  _health.json  _last_query.json  _log.md  _state_full.json
wiki/.obsidian/: workspace.json
wiki/concepts/: Agentic KPI Framework.md  Agentic KPI Framework.md.provenance.json  Agentic UX.md  Agentic UX.md.provenance.json  Ambient AI.md  Ambient AI.md.provenance.json  Computer-Using Agents.md  Computer-Using Agents.md.provenance.json  Edge-First Architecture.md  Edge-First Architecture.md.provenance.json  LinkedIn Semantic Search.md  LinkedIn Semantic Search.md.provenance.json  Local-First Development.md  Local-First Development.md.provenance.json  Multi-Agent Orchestration.md  Multi-Agent Orchestration.md.provenance.json  Sovereign AI.md  Sovereign AI.md.provenance.json  Zero-Trust AI Design.md  (+1 more)
wiki/entities/: Apple.md  (+17 more)
(+10 files in other folders)
