[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "antigravity-wiki"
version = "2.0.0"
description = "LLM-native, self-organizing knowledge base engine"
readme = "docs/MANUAL.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "python-frontmatter>=1.1.0",
    "pyyaml>=6.0",
    "rich>=13.9",
    "pymupdf>=1.25.0",
]

[project.scripts]
wiki = "scripts.cli:main"

[tool.setuptools.packages.find]
include = ["scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]